ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-demo
  namespace: yc-alb
  annotations:
    ingress.alb.yc.io/subnets: <список_идентификаторов_подсетей>
    ingress.alb.yc.io/security-groups: <список_идентификаторов_групп_безопасности>
    ingress.alb.yc.io/external-ipv4-address: <статический_публичный_IP-адрес>
    ingress.alb.yc.io/group-name: default
spec:
  rules:
    - host: <доменное_имя>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              resource:
                apiGroup: alb.yc.io
                kind: HttpBackendGroup
                name: alb-demo-bg
